Fixing Nav Force on mobile game mode (#105)
* Removing fixed positioning, maintaining body height but changing to vh

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,9 +33,8 @@ body {
 
 html.game-mode,
 html.game-mode body {
-  position: fixed;
   overflow: hidden;
-  height: 100%;
+  height: 100vh;
 }
 
 a {
